--- a/index.html
+++ b/index.html
@@ -288,28 +288,100 @@
           <div id="swiper-container-team" class="swiper-container">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
+                <img src="./src/img/team-8.jpg" alt="">
+                <div class="name">
+                  Dmytro Budorin
+                </div>
+                <div class="work">
+                  CFO and the Lead Manager
+                </div>
+                <div class="member-description">
+                  Dmytro is ACCA, he worked for Deloitte for 8 years and became the winner of Deloitte CIS Audit Challenge with his Audit BigData SAP solution which was widely implemented in CIS offices. He is one of the top executives within Ukraine’s military defence industry after its large scale reform was launched by the government in 2014—2015.
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/team-7.jpg" alt="">
+                <div class="name">
+                  Yegor Aushev
+                </div>
+                <div class="work">
+                  Сhief Operating Officer
+                </div>
+                <div class="member-description">
+                  Yegor holds Ph.D. in High Energy Physics from DESY, Hamburg. He is author of 22 scientific papers in this field. Since 2015 Yegor is CEO of Information Security Group — boutique cybersecurity firm providing penetration testing, data protection services and information security audit.
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/team-4.jpg" alt="">
+                <div class="name">
+                  Nikita Knysh
+                </div>
+                <div class="work">
+                  Community Director
+                </div>
+                <div class="member-description">
+                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/team-2.jpg" alt="">
+                <div class="name">
+                  Nikita Knysh
+                </div>
+                <div class="work">
+                  Community Director
+                </div>
+                <div class="member-description">
+                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/team-3.jpg" alt="">
+                <div class="name">
+                  Nikita Knysh
+                </div>
+                <div class="work">
+                  Community Director
+                </div>
+                <div class="member-description">
+                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
+                </div>
+              </div>
+              <div class="swiper-slide">
                 <img src="./src/img/team-1.jpg" alt="">
+                <div class="name">
+                  Nikita Knysh
+                </div>
+                <div class="work">
+                  Community Director
+                </div>
+                <div class="member-description">
+                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
+                </div>
               </div>
               <div class="swiper-slide">
-                <img src="./src/img/logo-hackit.png" alt="">
+                <img src="./src/img/team-5.jpg" alt="">
+                <div class="name">
+                  Nikita Knysh
+                </div>
+                <div class="work">
+                  Community Director
+                </div>
+                <div class="member-description">
+                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
+                </div>
               </div>
               <div class="swiper-slide">
-                <img src="./src/img/logo-ambisafe.png" alt="">
-              </div>
-              <div class="swiper-slide">
-                <img src="./src/img/logo-deloitte.png" alt="">
-              </div>
-              <div class="swiper-slide">
-                <img src="./src/img/logo-axon.png" alt="">
-              </div>
-              <div class="swiper-slide">
-                <img src="./src/img/logo-hackit.png" alt="">
-              </div>
-              <div class="swiper-slide">
-                <img src="./src/img/logo-ambisafe.png" alt="">
-              </div>
-              <div class="swiper-slide">
-                <img src="./src/img/logo-deloitte.png" alt="">
+                <img src="./src/img/team-6.jpg" alt="">
+                <div class="name">
+                  Nikita Knysh
+                </div>
+                <div class="work">
+                  Community Director
+                </div>
+                <div class="member-description">
+                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
+                </div>
               </div>
             </div>
           </div>
