fix team-slider on large screen, new video, change 2 and 3 team-members

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="hk-screen hk-main section">
     <div class="video-container">
       <video id="video-loader" preload autoplay>
-          <source src="./src/video/onload.mov" />
+          <source src="./src/video/onload.mp4" />
       </video>
     </div>
     <header class="hk-header">
@@ -460,7 +460,7 @@
   <div class="hk-screen hk-team hk-milestones section">
     <div class="hk-central_block">
       <div class="not-relative">
-        <div class="">
+        <div class="block-title-with-pagination">
           <h2>Executive team</h2>
           <div class="slider-pagination">
             <div class="swiper-button-prev"></div>
@@ -484,18 +484,6 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <img src="./src/img/team-7.jpg" alt="">
-                <div class="name">
-                  Yegor Aushev
-                </div>
-                <div class="work">
-                  Сhief Operating Officer
-                </div>
-                <div class="member-description">
-                  Yegor holds Ph.D. in High Energy Physics from DESY, Hamburg. He is author of 22 scientific papers in this field. Since 2015 Yegor is CEO of Information Security Group — boutique cybersecurity firm providing penetration testing, data protection services and information security audit.
-                </div>
-              </div>
-              <div class="swiper-slide">
                 <img src="./src/img/team-4.jpg" alt="">
                 <div class="name">
                   Nikita Knysh
@@ -505,6 +493,18 @@
                 </div>
                 <div class="member-description">
                   Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/team-7.jpg" alt="">
+                <div class="name">
+                  Yegor Aushev
+                </div>
+                <div class="work">
+                  Сhief Operating Officer
+                </div>
+                <div class="member-description">
+                  Yegor holds Ph.D. in High Energy Physics from DESY, Hamburg. He is author of 22 scientific papers in this field. Since 2015 Yegor is CEO of Information Security Group — boutique cybersecurity firm providing penetration testing, data protection services and information security audit.
                 </div>
               </div>
               <div class="swiper-slide">
