Change images and descs

--- a/index.html
+++ b/index.html
@@ -471,8 +471,11 @@
         <div class="team-slider">
           <div id="swiper-container-team" class="swiper-container">
             <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="./src/img/team-8.jpg" alt="">
+
+              <div class="swiper-slide"
+              onclick="window.open('http://linkedin.com/in/dmytro-budorin-acca-56a98035 ', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+                <img class="team-image" src="./src/img/team-8.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-8-active.jpg" alt="">
                 <div class="name">
                   Dmytro Budorin
                 </div>
@@ -480,92 +483,117 @@
                   CFO and the Lead Manager
                 </div>
                 <div class="member-description">
-                  Dmytro is ACCA, he worked for Deloitte for 8 years and became the winner of Deloitte CIS Audit Challenge with his Audit BigData SAP solution which was widely implemented in CIS offices. He is one of the top executives within Ukraine’s military defence industry after its large scale reform was launched by the government in 2014—2015.
+                  Dmytro is ACCA, he worked for Deloitte for 8 years and became the winner of Deloitte CIS Audit Challenge with his Audit BigData SAP solution which was widely implemented in CIS offices.
+                  He is one of the top executives within Ukraine’s military defence industry after its large scale reform was launched by the government in 2014—2015.
                 </div>
               </div>
-              <div class="swiper-slide">
-                <img src="./src/img/team-7.jpg" alt="">
+
+              <div class="swiper-slide"
+              onclick="window.open('http://www.linkedin.com/in/Nikita-Knysh', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+                <img class="team-image" src="./src/img/team-4.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-4-active.jpg" alt="">
                 <div class="name">
-                  Yegor Aushev
+                  Nikita Knysh
+                </div>
+                <div class="work">
+                  Community Director
+                </div>
+                <div class="member-description">
+                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
+                </div>
+              </div>
+
+              <div class="swiper-slide"
+              onclick="window.open('http://linkedin.com/in/dr-yegor-aushev-54b18455', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+                <img class="team-image" src="./src/img/team-7.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-7-active.jpg" alt="">
+              <div class="name">
+                  Dr. Yegor Aushev
                 </div>
                 <div class="work">
                   Сhief Operating Officer
                 </div>
                 <div class="member-description">
-                  Yegor holds Ph.D. in High Energy Physics from DESY, Hamburg. He is author of 22 scientific papers in this field. Since 2015 Yegor is CEO of Information Security Group — boutique cybersecurity firm providing penetration testing, data protection services and information security audit.
-                </div>
+                  Yegor holds Ph.D. in High Energy Physics from DESY, Hamburg. He is author of 22 scientific papers in this field. Since 2015 Yegor is CEO of Information Security Group — boutique cybersecurity firm providing penetration testing, data protection services and information security audit.                </div>
               </div>
-              <div class="swiper-slide">
-                <img src="./src/img/team-4.jpg" alt="">
+
+              <div class="swiper-slide"
+              onclick="window.open('https://www.linkedin.com/in/lyubomyr-pavlyk-111a4b48/', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+                <img class="team-image" src="./src/img/team-3.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-3-active.jpg" alt="">
                 <div class="name">
-                  Nikita Knysh
+                  Lyubomyr Pavlyk
                 </div>
                 <div class="work">
                   Community Director
                 </div>
                 <div class="member-description">
-                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
+                  Lyubomyr holds Bachelor's Degree in Finance and finished PreDevelopment Program
+                  Msc in Innovations and Entrepreneurship in LvBS (Lviv Business School).
+                  More than 10 years of management experience in insurance and fintech, last 6 in Vienna Insurance Group subsidiary (USG).
+                  He is serial entrepreneur, trader, investment adviser and a founder and CEO of IT company "Elearnio"
                 </div>
               </div>
-              <div class="swiper-slide">
-                <img src="./src/img/team-2.jpg" alt="">
+
+              <div class="swiper-slide"
+              onclick="window.open('https://www.linkedin.com/in/olga-samoilova-52506964', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+                <img class="team-image" src="./src/img/team-5.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-5-active.jpg" alt="">
                 <div class="name">
-                  Nikita Knysh
+                  Olga Samoilova
                 </div>
                 <div class="work">
-                  Community Director
+                  ICO Project manager
                 </div>
                 <div class="member-description">
-                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
+                  Speaker of the Hacken Project at Global conferences.
+                  More than 10 years of parliamentary debating, finalist and winner of several international debate tournaments. Preparation of the Official Fan-Zone infrastructure of the Final part of UEFA EURO 2012 Football Championship in Kyiv and Donetsk.
+                  http://ura.dn.ua/24.02.2011/107735.html
                 </div>
               </div>
-              <div class="swiper-slide">
-                <img src="./src/img/team-3.jpg" alt="">
+
+              <div class="swiper-slide"
+              onclick="window.open('https://www.linkedin.com/in/vladimir-taratushka-%E2%9C%94-84040960/', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+                <img class="team-image" src="./src/img/team-6.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-6-active.jpg" alt="">
                 <div class="name">
-                  Nikita Knysh
+                  Vladimir Taratushka
                 </div>
                 <div class="work">
-                  Community Director
+                  HackIT Conference Director
                 </div>
                 <div class="member-description">
-                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
                 </div>
               </div>
-              <div class="swiper-slide">
-                <img src="./src/img/team-1.jpg" alt="">
+
+              <div class="swiper-slide"
+              onclick="window.open('https://www.linkedin.com/in/broshevan/', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+                <img class="team-image" src="./src/img/team-2.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-2-active.jpg" alt="">
                 <div class="name">
-                  Nikita Knysh
+                  Evgenia Broshevan
                 </div>
                 <div class="work">
-                  Community Director
+                  HackIT Coordinator
                 </div>
                 <div class="member-description">
-                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
-                </div>
+                  Evgenia has Master’s degree in Cybersecurity and is is a co-founder of Kharkiv DEFCON Group. She is the winner of All-Ukrainian contest of students research works, has taken part in numerous scientific conferences and summer schools both in Ukraine and in Europe. Evgenia has organized a range of cybersecurity and blockchain events. The role in Hacken project is to coordinate HackIT activities.                </div>
               </div>
-              <div class="swiper-slide">
-                <img src="./src/img/team-5.jpg" alt="">
+
+              <div class="swiper-slide"
+              onclick="window.open('http://linkedin.com/in/andriimatiukhin', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+                <img class="team-image" src="./src/img/team-1.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-1-active.jpg" alt="">
                 <div class="name">
-                  Nikita Knysh
+                  Andrii Matiukhin
                 </div>
                 <div class="work">
-                  Community Director
+                  Chief Technical Officer
                 </div>
                 <div class="member-description">
-                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <img src="./src/img/team-6.jpg" alt="">
-                <div class="name">
-                  Nikita Knysh
-                </div>
-                <div class="work">
-                  Community Director
-                </div>
-                <div class="member-description">
-                  Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
-                </div>
+                  Andrii high qualified cyber security expert with 13 years of successful career path in industry. Worked for corporate customers and system integrators.
+                  Successfully drive complex technical solutions for a dozen projects in several countries for commercial companies and Government Agency, National Banks, Olympic Games. He is a certified expert in several areas, has more than 10 certificates of competence.
+                  His role in project is to provide technology leadership for developing, integrating, and supporting of Platform.
               </div>
             </div>
           </div>
