Fix last section

--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
       </div>
     </div>
   </div>
+
   <div class="hk-screen hk-team hk-milestones section">
     <div class="hk-central_block">
       <div class="not-relative">
@@ -601,6 +602,7 @@
       </div>
     </div>
   </div>
+</div>
 
   <div class="hk-screen hk-partners hk-milestones section">
     <div class="hk-central_block">
