--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                 <div class="work">
                   Chief Technical Officer
                 </div>
-                <div class="member-description">
+                <div class="member-description-last">
                   Andrii high qualified cyber security expert with 13 years of successful career path in industry. Worked for corporate customers and system integrators.
                   Successfully drive complex technical solutions for a dozen projects in several countries for commercial companies and Government Agency, National Banks, Olympic Games. He is a certified expert in several areas, has more than 10 certificates of competence.
                   His role in project is to provide technology leadership for developing, integrating, and supporting of Platform.
