--- a/index.html
+++ b/index.html
@@ -226,27 +226,27 @@
               <div class="hk-milestones-block_header-1">
                 <h4>1. Minimum milestone</h4>
                 <hr />
-                <p>1,5 min</p>
+                <p>1,5 mln</p>
               </div>
               <div class="hk-milestones-block_header-2">
                 <h4>2. Limited Milestone</h4>
                 <hr />
-                <p>4 min</p>
+                <p>4 mln</p>
               </div>
               <div class="hk-milestones-block_header-3">
                 <h4>3. Target Milestone</h4>
                 <hr />
-                <p>10 min</p>
+                <p>10 ,ln</p>
               </div>
               <div class="hk-milestones-block_header-4">
                 <h4>4. Advanced Milestone</h4>
                 <hr />
-                <p>18 min</p>
+                <p>18 mln</p>
               </div>
               <div class="hk-milestones-block_header-5">
                 <h4>5. Maximum Milestone</h4>
                 <hr />
-                <p>20 min</p>
+                <p>20 mln</p>
               </div>
             </div>
             <div class="hk-milestones-block_cards">
