--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <link href="src/css/style.css" rel="stylesheet">
   <link href="src/css/fonts.css" rel="stylesheet">
   <link href="src/css/material-design-iconic-font.css" rel="stylesheet">
+  <link href="src/css/custom-icons.css" rel="stylesheet">
   <link href="src/css/swiper.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://i.icomoon.io/public/9a1e688c69/UntitledProject3/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.css" />
 </head>
 
@@ -29,11 +31,11 @@
         <span class="hk-subscribe-icon"><i class="zmdi zmdi-email"></i></span>
         <span class="hk-subscribe-link">Subscribe to our newsletter</span>
       </a>
-
+  
       <ul class="hk-social">
         <li class="hk-social-link">
           <a href="#" role="link">
-            <i class="zmdi zmdi-twitter"></i>
+            <span class="icon-socials ico-messenger"></span>
           </a>
         </li>
         <li class="hk-social-link">
