icon-fonts fixed

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <span class="hk-subscribe-icon"><i class="zmdi zmdi-email"></i></span>
         <span class="hk-subscribe-link">Subscribe to our newsletter</span>
       </a>
-  
+
       <ul class="hk-social">
         <li class="hk-social-link">
           <a href="#" role="link">
-            <span class="icon-socials ico-messenger"></span>
+            <span class="icon-socials ico-slack"></span>
           </a>
         </li>
         <li class="hk-social-link">
@@ -55,12 +55,12 @@
         </li>
         <li class="hk-social-link">
           <a href="#" role="link">
-            <i class="zmdi zmdi-twitter"></i>
+            <span class="icon-socials ico-messenger"></span>
           </a>
         </li>
         <li class="hk-social-link">
           <a href="#" role="link">
-            <i class="zmdi zmdi-twitter"></i>
+            <span class="icon-socials ico-bitcoin"></span>
           </a>
         </li>
       </ul>
