--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
           </div>
           <div class="hk-timeline-line-4">
             <span class="hk-cell-1">HackIT conference</span>
-            <span class="hk-cell-2">HackIT week</span>
+            <span class="hk-cell-2">HackIT Cup</span>
             <span class="hk-cell-3">The Final Competition on <br />the biggest aircraft Mriya</span>
-            <span class="hk-cell-4">ICO</span>
+            <span class="hk-cell-4">Token Sale</span>
           </div>
         </div>
       </div>
@@ -346,7 +346,7 @@
             <h5>Length of<br />Token sale</h5> 1 month from<br />October 7th 2017
           </div>
           <div class="hk-details-pane">
-            <h5>Escrow</h5> 80% of the funds<br />raised are kept at<br />escrow account
+            <h5>Escrow</h5> in average 80% of the funds<br />raised are kept at<br />escrow account
           </div>
         </div>
       </div>
