Some fixes for slider

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
               <ul class="hk-social">
                 <li class="hk-social-link">
                   <a href="#" role="link">
-                    <i class="zmdi zmdi-twitter"></i>
+                    <span class="icon-socials ico-slack"></span>
                   </a>
                 </li>
                 <li class="hk-social-link">
@@ -677,12 +677,12 @@
                 </li>
                 <li class="hk-social-link">
                   <a href="#" role="link">
-                    <i class="zmdi zmdi-twitter"></i>
+                    <span class="icon-socials ico-messenger"></span>
                   </a>
                 </li>
                 <li class="hk-social-link">
                   <a href="#" role="link">
-                    <i class="zmdi zmdi-twitter"></i>
+                    <span class="icon-socials ico-bitcoin"></span>
                   </a>
                 </li>
               </ul>
