--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
   <div class="hk-screen hk-main section">
     <div class="video-container">
-      <video id="video-loader" preload autoplay>
+      <!-- <video id="video-loader" preload autoplay>
           <source src="./src/video/onload.mp4" />
-      </video>
+      </video> -->
     </div>
     <header class="hk-header">
       <a class="hk-subscribe" href="">
@@ -465,10 +465,10 @@
       <div class="not-relative">
         <div class="block-title-with-pagination">
           <h2>Executive team</h2>
-          <div class="slider-pagination">
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-button-next"></div>
+          <div class="slider-pagination team">
+            <div class="swiper-button-prev team"></div>
+            <div class="swiper-pagination team"></div>
+            <div class="swiper-button-next team"></div>
           </div>
         </div>
         <div class="team-slider">
@@ -609,12 +609,62 @@
   <div class="hk-screen hk-partners hk-milestones section">
     <div class="hk-central_block">
         <div class="not-relative">
-          <div class="block-title-with-pagination">
-            <h2>Partners</h2>
-            <div class="slider-pagination">
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-pagination"></div>
-              <div class="swiper-button-next"></div>
+          <div class="block-title-with-pagination advisors">
+            <h2>Advisors and Partners</h2>
+            <!-- <div class="slider-pagination advisors">
+              <div class="swiper-button-prev advisors "></div>
+              <div class="swiper-pagination advisors"></div>
+              <div class="swiper-button-next advisors"></div>
+            </div> -->
+          </div>
+          <div>
+            <div class="advisors-slider">
+              <div id="swiper-container-advisors" class="swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img class="advisor-image" src="./src/img/advisor-1.jpg" alt="">
+                    <div class="name">
+                      Oleksiy Matiiasevych
+                    </div>
+                    <div class="member-description">
+                      Blockchain engineering Ethereum architect, Smart contracts engineer, Ambisafe, Inc
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="advisor-image" src="./src/img/advisor-2.jpg" alt="">
+                    <div class="name">
+                      Artem Afyan
+                    </div>
+                    <div class="member-description">
+                      Escrow agent, legal engineer with solid expertise in providing legal support for the cryptocurrency business, managing partner at Juscutum
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="advisor-image" src="./src/img/advisor-3.jpg" alt="">
+                    <div class="name">
+                      Kharenko Michael
+                    </div>
+                    <div class="member-description">
+                      Legal and investment advisor, Sayenko Kharenko & partners
+                    </div>
+                  </div>
+                  <!-- <div class="swiper-slide">
+                    <img class="advisor-image" src="./src/img/advisor-4.jpg" alt="">
+                    <div class="name">
+                      Aleksandr Momot
+                    </div>
+                    <div class="member-description">
+                    </div>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="block-title-with-pagination partners">
+            <div class="slider-pagination partners">
+              <div class="swiper-button-prev partners "></div>
+              <div class="swiper-pagination partners"></div>
+              <div class="swiper-button-next partners"></div>
             </div>
           </div>
           <div>
